--- a/lecture_01/lecture_01_notebook.ipynb
+++ b/lecture_01/lecture_01_notebook.ipynb
@@ -63,6 +63,40 @@
    "source": [
     "There is a white dot right next to your file name. If that dot is there, that means your file is NOT SAVED! CMD + S"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc75db60",
+   "metadata": {},
+   "source": [
+    "# Stuff from Lecture 2: basically showing how to update this NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2f9ceabf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new code woahhhh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"new code woahhhh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d2c3b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
