changes to assignment and lecture
assignment is NOT ready for turn in

--- a/_assignments/assignment_3/Assignment3.ipynb
+++ b/_assignments/assignment_3/Assignment3.ipynb
@@ -39,11 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import any necessary modules/packages\n"
+    "# import any necessary modules/packages\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt \n",
+    "import numpy as np"
    ]
   },
   {
@@ -89,12 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "659.7344572538565\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here\n",
-    "\n"
+    "\n",
+    "r1 = 6\n",
+    "r2 = 3\n",
+    "h = 10\n",
+    "\n",
+    "Volume = (1/3)*(np.pi)*h*((r1**2)+(r1*r2)+(r2**2))\n",
+    "print(Volume)"
    ]
   },
   {
@@ -117,11 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 32.  50.  68.  86. 104.]\n",
+      "68.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here\n",
+    "\n",
+    "temps_c = np.array([0,10,20,30,40])\n",
+    "\n",
+    "temps_f = temps_c * (9/5) + 32\n",
+    "\n",
+    "print(temps_f)\n",
+    "\n",
+    "print(np.average(temps_f))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -154,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
